--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,39 @@
-Dependencias
+# Dependencias
 node_modules/
 
-Salida de build de Vite
+# Salidas de build
 dist/
+.vite/
 
-Archivos de entorno
+# Archivos de entorno (ignorar secretos locales)
 .env
 .env.local
-.env..local
+.env.*.local
+!.env.example
 
-Logs
-npm-debug.log
+# Logs
+npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-Editor/directorio de sistema
+# Editor / sistema
 .DS_Store
 Thumbs.db
 .vscode/
 .idea/
 *.swp
 
-Archivos de lock antiguos (usá solo uno)
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
-Configuraciones locales
-*.local
+# Cachés, cobertura y caches de bundlers
+.cache/
+coverage/
+.parcel-cache/
+
+# TypeScript
+*.tsbuildinfo
+
+# Archivos temporales
+*.log
+
+# NOTA: Mantén los lockfiles (package-lock.json, yarn.lock, pnpm-lock.yaml)
+# en el repositorio para determinismo de dependencias.
